[workspace]
resolver = "2"
members = [
    "contracts/transaction-analytics",
    "contracts/contract-upgrade/old_contract",
    "contracts/contract-upgrade/new_contract",
    "contracts/batch-transfer",
    "contracts/batch-conversion",
    "contracts/batch-rewards",
    "contracts/budget-recommendations",
    "contracts/multi-currency-wallet",
    "contracts/spending-limits",
    "contracts/savings-goals",
    "contracts/escrow",
    "contracts/budget-allocation",

]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/stellarspend/stellarspend-contracts"

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
